apps/monitoring/ingress/ingress.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/master/v1.30.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    name: grafana-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        name: http-web
  tls:
    - hosts:
      - grafana
